# hc-pynomad

./: .editorconfig  .flake8  .gitignore  .pylintrc  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: prs.yml  publish.yml
hc_pynomad/: __init__.py  jobs.py
hc_pynomad/exceptions/: base.py
hc_pynomad/lib/: agent.py  nodes.py  nomad.py  status.py  utils.py
hc_pynomad/models/: agent_models.py  base.py  jobs.py  nodes.py
pynomad/: __init__.py
pynomad/lib/: agent.py  nomad.py
tests/: test_jobs_models.py  test_lib_nomad.py  test_models_agent.py
tests/fixtures/: agent.py  nomad_job.json
tests/fixtures/nodes/: read-node-from-docs.json
